--- a/test.Rmd
+++ b/test.Rmd
@@ -28,3 +28,11 @@ plot(pressure)
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
+## Including Plots
+
+You can also embed plots, for example:
+
+```{r pressure_2, echo=FALSE}
+plot(pressure$temperature)
+```
